@startuml

title __ICT373ASSIGN2's Class Diagram__\n

  namespace  {
    class Address {
    }
  }
  

  namespace  {
    class CreatePerson {
    }
  }
  

  namespace  {
    class EditGUI {
    }
  }
  

  namespace  {
    class FileHandler {
    }
  }
  

  namespace  {
    interface GUIHelper {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class MainGUI {
    }
  }
  

  namespace  {
    class Person {
    }
  }
  

  namespace  {
    class RootObservable {
    }
  }
  

  Address .up.|> java.io.Serializable
  EditGUI .up.|> GUIHelper
  EditGUI o-- RootObservable : root
  FileHandler .up.|> java.io.Serializable
  Main -up-|> javafx.application.Application
  MainGUI .up.|> GUIHelper
  MainGUI o-- RootObservable : root
  Person .up.|> java.io.Serializable
  Person o-- Address : address
  Person o-- Person : spouse
  RootObservable o-- Person : rootPerson
  RootObservable o-- Person : selectedPerson


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
